# cpp-stuff

3D-Stuff/Tut 01 Hello Triangle/: meson.build
3D-Stuff/example/: main.cpp  meson.build
3D-Stuff/example/.cache/clangd/index/: main.cpp.D2EBCC708AF07FD1.idx
cpp/ai-cpp-todo-tut/: meson.build  todo.cpp
cpp/drawStraightLine/: main.cpp  meson.build
cpp/vectors/: main.cpp  meson.build
gtkmm/BasicWindow/: basicWindow.cpp  basicWindow.hpp  meson.build
gtkmm/barCodeScanner/: main.cpp  mainWindow.cpp  mainWindow.hpp
gtkmm/buttons_widget/: buttonWidget.hpp  main.cpp  meson.build
gtkmm/calc_ver1/: meson.build
gtkmm/checkButtonWidget/: checkBtn.cpp  checkBtn.hpp  main.cpp  meson.build
gtkmm/checkButtonWidget/.cache/clangd/index/: main.cpp.E40443FA7CE0EA68.idx
gtkmm/entryWidgets/: entryWgt.cpp  main.cpp  meson.build
gtkmm/helloworld/: helloworld.cpp  meson.build
gtkmm/oldstuff/buttons/buttons_widget/: meson.build
gtkmm/oldstuff/buttons/buttons_widget/.cache/clangd/index/: buttonWidget.cpp.312D48B0845FB2E5.idx  buttonWidget.hpp.72AE4A5B85021ECF.idx  main.cpp.00A4D4EDCA93754E.idx
gtkmm/oldstuff/containerWidgets/singleItemContainers/paned/: exampleWindow.cpp  main.cpp  meson.build  messageText.cpp
gtkmm/oldstuff/containerWidgets/singleItemContainers/paned/.cache/clangd/index/: exampleWindow.cpp.2C56E8744EC02754.idx  exampleWindow.hpp.F881491EDA4960E8.idx  messageList.cpp.66F355679E16C453.idx  messageText.cpp.CF1412545051EA5A.idx  messageText.hpp.152145B83B9BEE3F.idx  messageText.hpp.9627388A753B9702.idx
gtkmm/radioButtonExample/: meson.build  radBtn.hpp
(+164 files in other folders)
